--- a/vercel.json
+++ b/vercel.json
@@ -14,12 +14,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/",
+      "dest": "/"
     },
     {
-      "src": "/(.*)",
-      "dest": "/client/build/$1"
+      "src": "/api",
+      "dest": "/"
     }
   ]
 }
